Converted to Google https://s.natalian.org/2019-04-21/1555826808_2560x1440.png

--- a/up.json.in
+++ b/up.json.in
@@ -1,10 +1,10 @@
 {
-  "name": "internal-github-login",
-  "profile": "uneet-dev",
+  "name": "internal-google-login",
+  "profile": "mine",
   "stages": {
     "staging": {
-      "domain": "github.dev.unee-t.com",
-      "zone": "dev.unee-t.com"
+      "domain": "gauth.goserverless.sg",
+      "zone": "goserverless.sg"
     }
   },
   "regions": [
@@ -14,9 +14,8 @@
     "disable": true
   },
   "environment": {
-    "SESSION_SECRET": "$SESSION_SECRET",
-    "GITHUB_CLIENT_ID": "$GITHUB_CLIENT_ID",
-    "GITHUB_CLIENT_SECRET": "$GITHUB_CLIENT_SECRET",
-    "DOMAIN": "github.dev.unee-t.com"
+    "GOOGLE_CLIENT_ID": "$GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET": "$GOOGLE_CLIENT_SECRET",
+    "DOMAIN": "gauth.goserverless.sg"
   }
 }
